<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_upcoming"
    >


    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.dicoding.bangkitapi.ui.upcoming.UpcomingFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.dicoding.bangkitapi.ui.finished.FinishedFragment"
        android:label="@string/finished"
        tools:layout="@layout/fragment_finished" />

        <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.bangkitapi.ui.favorite.FavoriteFragment"
        android:label="@string/finished"
        tools:layout="@layout/fragment_favorite" />

        <fragment
        android:id="@+id/navigation_setting"
        android:name="com.dicoding.bangkitapi.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />





</navigation>