<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"> <!-- Tambahkan ini -->

        <!-- Title Favorit -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_setting"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginBottom="4dp"
            android:gravity="left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_setting"
            android:textSize="18sp"
            android:layout_marginLeft="6dp"
            android:layout_marginBottom="15dp"
            android:gravity="left" />

    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:textSize="18sp"
        android:layout_gravity="center" /> <!-- Tambahkan ini -->

</androidx.cardview.widget.CardView>
